After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743663 - Minor tab-label fixes
Minor tab-label fixes
Status: RESOLVED FIXED
Product: gnome-terminal
Classification: Core
Component: general
git master
Other All
: Normal normal
: ---
Assigned To: GNOME Terminal Maintainers
GNOME Terminal Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-01-28 18:07 UTC by Debarshi Ray
Modified: 2015-02-11 19:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
tab-label: Fix the name of the parent type (1018 bytes, patch)
2015-01-28 18:08 UTC, Debarshi Ray
committed Details | Review
tab-label: Rely on new GTK+ API to center the label (1.59 KB, patch)
2015-01-28 18:09 UTC, Debarshi Ray
none Details | Review
tab-label: Rely on new GTK+ API to center the label (1.31 KB, patch)
2015-02-11 12:53 UTC, Debarshi Ray
none Details | Review
tab-label: Rely on new GTK+ API to center the label (1012 bytes, patch)
2015-02-11 18:59 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2015-01-28 18:07:33 UTC
See patches.
Comment 1 Debarshi Ray 2015-01-28 18:08:39 UTC
Created attachment 295692 [details] [review]
tab-label: Fix the name of the parent type
Comment 2 Debarshi Ray 2015-01-28 18:09:12 UTC
Created attachment 295693 [details] [review]
tab-label: Rely on new GTK+ API to center the label
Comment 3 Christian Persch 2015-02-10 18:40:35 UTC
Comment on attachment 295693 [details] [review]
tab-label: Rely on new GTK+ API to center the label

I'd rather not bump the gtk req for something so trivial, but I'm ok with #if GTK_CHECK_VERSION this.
Comment 4 Debarshi Ray 2015-02-11 12:53:06 UTC
Created attachment 296591 [details] [review]
tab-label: Rely on new GTK+ API to center the label
Comment 5 Christian Persch 2015-02-11 15:31:24 UTC
Review of attachment 296591 [details] [review]:

::: src/terminal-tab-label.c
@@ +202,1 @@
   gtk_box_pack_start (GTK_BOX (hbox), label, TRUE, TRUE, 0);

This should be outside the #if, I think.
Comment 6 Debarshi Ray 2015-02-11 18:59:27 UTC
(In reply to Christian Persch from comment #5)
> Review of attachment 296591 [details] [review] [review]:
> 
> ::: src/terminal-tab-label.c
> @@ +202,1 @@
>    gtk_box_pack_start (GTK_BOX (hbox), label, TRUE, TRUE, 0);
> 
> This should be outside the #if, I think.

Yes, you are right. I was wrong to assume that gtk_box_set_center_widget will take care of it. Realized that after reading the code.
Comment 7 Debarshi Ray 2015-02-11 18:59:56 UTC
Created attachment 296632 [details] [review]
tab-label: Rely on new GTK+ API to center the label