tab-label: Fix the name of the parent type

Fallout from 687e54a5d74e186ac4ae94acd10f71857fd23f64

https://bugzilla.gnome.org/show_bug.cgi?id=743663